--- a/.gitignore
+++ b/.gitignore
@@ -98,6 +98,7 @@ Temporary Items
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
+.idea/**/application.conf
 
 # Gradle
 .idea/**/gradle.xml
