gitignore file correction

--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,7 @@ Icon
 .Trashes
 .VolumeIcon.icns
 .com.apple.timemachine.donotpresent
-.json
+*.json
 
 # Directories potentially created on remote AFP share
 .AppleDB
