--- a/.gitignore
+++ b/.gitignore
@@ -6,17 +6,7 @@
 *.log
 *.conf
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
 # End of https://www.toptal.com/developers/gitignore/api/scala
-
-### Java ###
-# Compiled class file
-*.class
-
-# Log file
-*.log
 
 # BlueJ files
 *.ctxt
@@ -80,6 +70,9 @@ Temporary Items
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
+/.idea
+/.bsp
+.idea
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
@@ -205,5 +198,7 @@ fabric.properties
 *_BASE_*.txt
 *_LOCAL_*.txt
 *_REMOTE_*.txt
+
+/RUNNING_PID
 
 # End of https://www.toptal.com/developers/gitignore/api/git
